# phonetool

./: .gitignore  Cargo.toml  README.md  STATE.md
.githooks/: pre-push
crates/phonetool-attest/: Cargo.toml
crates/phonetool-attest/src/: lib.rs  passport.rs  sipmsg.rs
crates/phonetool-attest/tests/: inspect.rs
crates/phonetool-authgate/: Cargo.toml
crates/phonetool-authgate/src/: capability.rs  consent.rs  gate.rs  lib.rs
crates/phonetool-authgate/tests/: gate_behavior.rs
crates/phonetool-baittriage/: Cargo.toml
crates/phonetool-baittriage/src/: correlate.rs  extract.rs  ingest.rs  lib.rs
crates/phonetool-baittriage/tests/: assess.rs  extract.rs  ingest.rs
crates/phonetool-cell-survey/: Cargo.toml
crates/phonetool-cell-survey/src/: cellmap.rs  decode_gsm.rs  decode_lte.rs  decode_nr.rs  detect.rs  lib.rs  source.rs
crates/phonetool-cell-survey/tests/: survey.rs
crates/phonetool-cli/: Cargo.toml
crates/phonetool-cli/src/: main.rs
crates/phonetool-core/: Cargo.toml
crates/phonetool-core/src/: capture.rs  config.rs  lib.rs  plugin.rs  registry.rs  store.rs  transducer.rs
crates/phonetool-core/tests/: registry_arbitration.rs
crates/phonetool-gnss/: Cargo.toml
crates/phonetool-gnss/src/: acquire.rs  constants.rs  gold.rs  integrity.rs  lib.rs  navmsg.rs  navsync.rs  pvt.rs  track.rs
crates/phonetool-gnss/tests/: gnss_pipeline.rs
crates/phonetool-legacy-hw/: Cargo.toml
crates/phonetool-legacy-hw/src/: dsp.rs  lib.rs  sense.rs  source.rs
crates/phonetool-legacy-hw/tests/: line.rs
crates/phonetool-numintel/: Cargo.toml
crates/phonetool-numintel/src/: lib.rs  lookup.rs  number.rs
crates/phonetool-numintel/tests/: degenerate_cases.rs
crates/phonetool-rf-tx/: Cargo.toml
crates/phonetool-rf-tx/src/: bandplan.rs  lib.rs  modulate.rs  payload.rs  sink.rs
crates/phonetool-rf-tx/tests/: transmit.rs
crates/phonetool-sdr-rx/: Cargo.toml
crates/phonetool-sdr-rx/src/: classify.rs  lib.rs  source.rs
crates/phonetool-sdr-rx/src/dsp/: demod.rs  identify.rs  mod.rs  sweep.rs
crates/phonetool-sdr-rx/tests/: offline_pipeline.rs
crates/phonetool-sip/: Cargo.toml
crates/phonetool-sip/src/: enumerate.rs  lib.rs  message.rs
crates/phonetool-sip/tests/: active_enum.rs  message_parse.rs
crates/phonetool-ss7/: Cargo.toml
crates/phonetool-ss7/src/: ber.rs  classify.rs  diameter.rs  lib.rs  source.rs  ss7.rs
crates/phonetool-ss7/tests/: analyze.rs
crates/phonetool-subprocess/: Cargo.toml
crates/phonetool-subprocess/src/: frame.rs  lib.rs
crates/phonetool-subprocess/tests/: tier_b_integration.rs
crates/phonetool-wardial/: Cargo.toml
crates/phonetool-wardial/src/: classify.rs  lib.rs  message.rs  originate.rs  tone.rs
crates/phonetool-wardial/tests/: sweep_loopback.rs
docs/: DEVICES.md  HARDWARE-PHASE1.md
scripts/: install-hooks.sh  pre-push-guard.sh
specs/attest/: design.md  requirements.md  tasks.md
specs/authgate/: design.md  requirements.md  tasks.md
specs/baittriage/: design.md  requirements.md  tasks.md
specs/cell-survey/: design.md  requirements.md  tasks.md
specs/gnss/: design.md  requirements.md  tasks.md
specs/legacy-hw/: design.md  requirements.md  tasks.md
specs/numintel/: design.md  requirements.md  tasks.md
specs/rf-tx/: design.md  requirements.md  tasks.md
specs/sdr-rx/: design.md  requirements.md  tasks.md
specs/sip-recon/: design.md  requirements.md  tasks.md
specs/ss7/: design.md  requirements.md  tasks.md
specs/subprocess-ipc-contract/: design.md  requirements.md  tasks.md
specs/wardial/: design.md  requirements.md  tasks.md
specs/workbench-shell/: design.md  requirements.md  tasks.md
