[package]
name = "phonetool-authgate"
description = "The spine: a two-axis type-state authorization gate. Active/TX operations are unrepresentable without an unforgeable Grant minted here; the Passive (recon/RX/knowledge) path routes around the gate by construction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
