[package]
name = "phonetool-core"
description = "The workbench shell: the Plugin trait + PluginRegistry, config, an offline-first sqlite data layer, and the capture/consent bus. Links NO network egress — offline is the default, online is a plugin mode."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
phonetool-authgate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
