[package]
name = "phonetool-subprocess"
description = "Tier-B subprocess plugin host: proxies the Plugin trait over length-prefixed JSON to an out-of-process child. Enables polyglot capabilities (GNU Radio, gnss-sdr, Osmocom) behind the same dispatch contract as native plugins."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
phonetool-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
